[gd_scene load_steps=27 format=2]

[ext_resource path="res://Objects/Enemies/RedKoopa/RedKoopa.gd" type="Script" id=1]
[ext_resource path="res://Assets/Graphics/Sprites/Enemies/RedKoopa/Die/red_koopa_die1.png" type="Texture" id=2]
[ext_resource path="res://Assets/Graphics/Sprites/Enemies/RedKoopa/Die/red_koopa_die2.png" type="Texture" id=3]
[ext_resource path="res://Assets/Graphics/Sprites/Enemies/RedKoopa/Die/red_koopa_die3.png" type="Texture" id=4]
[ext_resource path="res://Assets/Graphics/Sprites/Enemies/RedKoopa/Die/red_koopa_die4.png" type="Texture" id=5]
[ext_resource path="res://Assets/Graphics/Sprites/Enemies/RedKoopa/Die/red_koopa_die5.png" type="Texture" id=6]
[ext_resource path="res://Assets/Graphics/Sprites/Enemies/RedKoopa/Shell/red_koopa_shell4.png" type="Texture" id=7]
[ext_resource path="res://Assets/Graphics/Sprites/Enemies/RedKoopa/Shell/red_koopa_shell5.png" type="Texture" id=8]
[ext_resource path="res://Assets/Graphics/Sprites/Enemies/RedKoopa/Shell/red_koopa_shell6.png" type="Texture" id=9]
[ext_resource path="res://Assets/Graphics/Sprites/Enemies/RedKoopa/Shell/red_koopa_shell7.png" type="Texture" id=10]
[ext_resource path="res://Assets/Graphics/Sprites/Enemies/RedKoopa/Shell/red_koopa_shell8.png" type="Texture" id=11]
[ext_resource path="res://Assets/Graphics/Sprites/Enemies/RedKoopa/Shell/red_koopa_shell1.png" type="Texture" id=12]
[ext_resource path="res://Assets/Graphics/Sprites/Enemies/RedKoopa/Shell/red_koopa_shell2.png" type="Texture" id=13]
[ext_resource path="res://Assets/Graphics/Sprites/Enemies/RedKoopa/Shell/red_koopa_shell3.png" type="Texture" id=14]
[ext_resource path="res://Assets/Graphics/Sprites/Enemies/RedKoopa/Walk/red_koopa1.png" type="Texture" id=15]
[ext_resource path="res://Assets/Graphics/Sprites/Enemies/RedKoopa/Walk/red_koopa2.png" type="Texture" id=16]
[ext_resource path="res://Assets/Graphics/Sprites/Enemies/RedKoopa/Walk/red_koopa3.png" type="Texture" id=17]
[ext_resource path="res://Assets/Graphics/Sprites/Enemies/RedKoopa/Walk/red_koopa4.png" type="Texture" id=18]
[ext_resource path="res://Assets/Graphics/Sprites/Enemies/RedKoopa/Walk/red_koopa5.png" type="Texture" id=19]
[ext_resource path="res://Assets/Graphics/Sprites/Enemies/RedKoopa/Walk/red_koopa6.png" type="Texture" id=20]
[ext_resource path="res://Assets/Audio/Enemies/koopa.wav" type="AudioStream" id=21]
[ext_resource path="res://Assets/Audio/Enemies/goomba_die.wav" type="AudioStream" id=25]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 15 ), ExtResource( 16 ), ExtResource( 17 ), ExtResource( 18 ), ExtResource( 19 ), ExtResource( 20 ) ],
"loop": true,
"name": "walk",
"speed": 10.0
}, {
"frames": [ ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 11 ), ExtResource( 12 ), ExtResource( 13 ), ExtResource( 14 ) ],
"loop": true,
"name": "shell",
"speed": 10.0
}, {
"frames": [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ) ],
"loop": false,
"name": "die",
"speed": 12.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 8.01489, 12 )

[sub_resource type="Animation" id=3]
resource_name = "squash"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 0.594604, 2, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.2, 0.7 ), Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 0.594604, 2, 1 ),
"update": 0,
"values": [ Vector2( 0, -2 ), Vector2( 0, 3 ), Vector2( 0, -2 ) ]
}

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 19, 11 )

[node name="RedKoopa" type="KinematicBody2D"]
collision_layer = 2
collision_mask = 2
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, -4 )
frames = SubResource( 1 )
animation = "walk"
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 4 )
shape = SubResource( 2 )

[node name="SFXWallCollision" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 21 )
volume_db = 14.0
bus = "SFX"

[node name="SFXDie" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 25 )
bus = "SFX"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/squash = SubResource( 3 )

[node name="Shell" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Shell"]
position = Vector2( 0, 4 )
shape = SubResource( 4 )

[node name="DestroyTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="VisibilityEnabler2D" type="VisibilityEnabler2D" parent="."]
process_parent = true
physics_process_parent = true

[node name="RayCast2D" type="RayCast2D" parent="."]
position = Vector2( 6, 13 )
enabled = true
cast_to = Vector2( 0, 8 )
[connection signal="cappy_kill" from="." to="." method="_on_Koopa_cappy_kill"]
[connection signal="kill" from="." to="." method="_on_Koopa_kill"]
[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="body_entered" from="Shell" to="." method="_on_Shell_body_entered"]
[connection signal="timeout" from="DestroyTimer" to="." method="_on_DestroyTimer_timeout"]
